[gd_scene load_steps=4 format=2]

[ext_resource path="res://Lobby Browser/LobbyBrowser.gd" type="Script" id=1]
[ext_resource path="res://Assets/Roboto-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="LobbyBrowser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SteamName" type="Label" parent="."]
margin_left = 28.0
margin_top = 42.0
margin_right = 316.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "Steam Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbiesPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -390.0
margin_right = 800.0
margin_bottom = 460.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbiesLabel" type="Label" parent="LobbiesPanel"]
margin_left = 35.0
margin_top = 35.0
margin_right = 227.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 1 )
text = "Lobbies"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyContainer" type="ScrollContainer" parent="LobbiesPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -765.0
margin_top = -310.0
margin_right = 765.0
margin_bottom = 390.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LobbiesPanel/LobbyContainer"]
